Completed Doctors List Page both Backend API and Frontend Display

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -4,3 +4,4 @@ CLOUDINARY_API_KEY=944952272585281
 CLOUDINARY_SECRET_KEY=7oaRervGSTR7o6MYTlMhKGIBUk0cvc
 ADMIN_EMAIL=admin@prescripto.com
 ADMIN_PASSWORD=admin@123
+JWT_SECRET=sujandev
