Completed Payment Integration, PayOnline feature both frontend and backend

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,3 +5,6 @@ CLOUDINARY_SECRET_KEY=7oaRervGSTR7o6MYTlMhKGIBUk0cvc
 ADMIN_EMAIL=admin@prescripto.com
 ADMIN_PASSWORD=admin@123
 JWT_SECRET=sujandev
+RAZOR_PAY_KEY_ID=rzp_test_RtJSTRZQeIuKQXobb
+RAZOR_PAY_KEY_SECRET=2Gjip9byXEV5BSTRj7pwSEdmMuk
+CURRENCY = 'INR'
